# nib

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  install-hooks.sh  justfile
.claude/skills/nib-design/: SKILL.md
.githooks/: pre-commit
.github/workflows/: ci.yaml  pages.yaml
backend/: Cargo.toml  bacon.toml
backend/migrations/: 0001_init.sql  0002_model.sql
backend/src/: auth.rs  db.rs  main.rs  mcp.rs  session.rs  sync.rs
core/: Cargo.toml
core/src/: history.rs  lib.rs  model.rs  ops.rs  snap.rs
core/src/model/: booleans.rs  document.rs  geometry.rs  path.rs  shapes.rs  tree.rs  types.rs
core/tests/: fidelity.rs  perf.rs  roundtrip.rs  tool_pixels.rs
core/tests/common/: mod.rs
frontend/: .gitignore  CLAUDE.md  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  vite.config.ts  vitest.config.ts
frontend/e2e/: smoke.spec.ts
frontend/scripts/: gen-icons.sh
frontend/src/: app.html
frontend/src/lib/: view.ts
frontend/src/lib/actions/: focusTrap.ts
frontend/src/lib/backend/: client.ts  flag.ts  sync.svelte.ts
frontend/src/lib/canvas/: machine.ts
frontend/src/lib/components/: BackendPanel.svelte  ColorInput.svelte  CommandPalette.svelte  EditorCanvas.svelte  FileList.svelte  ImportDialog.svelte  Inspector.svelte  Overlay.svelte  PaintInput.svelte  Popover.svelte  SettingsDialog.svelte  SourceView.svelte  ToolRail.svelte  TopBar.svelte  WelcomeDialog.svelte  Wordmark.svelte
frontend/src/lib/core/: index.ts
frontend/src/lib/model/: document.ts  geometry.ts  index.ts  path.ts  shapes.ts  types.ts
frontend/src/lib/model/__tests__/: document.test.ts  path-edit.test.ts  path.test.ts
frontend/src/lib/persistence/: index.ts
frontend/src/lib/snap/: index.ts
frontend/src/lib/snap/__tests__/: snap.test.ts
frontend/src/lib/stores/: canvas.svelte.ts  document.svelte.ts  history.svelte.ts  interaction.svelte.ts  settings.svelte.ts  tool.svelte.ts  viewport.svelte.ts  workspace.svelte.ts
frontend/src/lib/styles/: halo.css
frontend/src/lib/tools/: add-node.ts  circle.ts  delete-node.ts  eyedropper.ts  guides.ts  hit.ts  index.ts  line.ts  pen.ts  polygon.ts  rect.ts  select.ts  shape-util.ts  star.ts  text.ts  transform.ts  types.ts
frontend/src/lib/tools/__tests__/: guides.test.ts  snap.test.ts
frontend/src/lib/workspace/: file-system-access.d.ts  fs.ts  handles.ts
frontend/src/routes/: +layout.svelte  +layout.ts  +page.svelte
frontend/static/: manifest.webmanifest
