[package]
name = "nib-core"
version = "0.0.0"
edition = "2024"
description = "nib's document/geometry/op engine — compiles to WASM (browser) and native (backend + tests)."
license = "MIT"
publish = false

[lib]
# cdylib → the .wasm for wasm-pack; rlib → usable natively (backend crate, `cargo test`).
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.126"
serde = { version = "1.0.228", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
kurbo = "0.13.1"
roxmltree = "0.21.1"
xmlparser = "0.13.6"
indexmap = { version = "2.14.0", features = ["serde"] }
i_overlay = "7.0.2"
serde_json = "1.0.150"
# Stable, globally-unique node ids minted at creation (carried in ops, stored in the model) so no
# two processes ever invent a different id for the same node. `js` = getrandom's wasm backend.
uuid = { version = "1.11.0", features = ["v4", "js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.76"
# Render-fidelity gate (tests/fidelity.rs only): rasterize source vs. canonical export and
# pixel-diff. A dev-dep, so it never touches the WASM build — only `cargo test`. Same version the
# backend renders with (MCP `render_document`).
resvg = "0.47.0"

# wasm-pack's bundled wasm-opt is too old for the post-MVP wasm features modern rustc emits
# by default (bulk-memory, sign-ext, nontrapping-fptoint, …), and chasing --enable-* flags
# is brittle. Disable it — cargo's release profile (opt-level="s" + lto + strip) already
# shrinks the .wasm. TODO: add a modern binaryen wasm-opt pass (local + CI) for extra size.
[package.metadata.wasm-pack.profile.release]
wasm-opt = false
